--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: #f0f0f0;
+  font-family: Helvetica, sans-serif;
+  background: linear-gradient(45deg, rgb(128, 93, 85), rgb(255, 248, 241));
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,14 +9,17 @@ body {
 }
 
 .container {
-  background-color: #fff;
+  background-color: rgba(0, 0, 0, .2);
+  color: white;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 30px rgba(255, 255, 255, 0.2);
 }
 
 h1 {
+  margin-top: 0px;
   margin-bottom: 20px;
+  font-weight: 400;
 }
 
 form {
@@ -37,7 +40,7 @@ input {
 
 button {
   padding: 10px;
-  background-color: #007bff;
+  background-color: #00a2ff;
   color: white;
   border: none;
   border-radius: 4px;
@@ -45,7 +48,11 @@ button {
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: #0074b3;
+}
+
+button:active {
+  background-color: rgb(194, 128, 48);
 }
 
 #result {
